fix navigation bar spacing

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -340,9 +340,8 @@ body {
     color: #666;
     background-color: #fff;
     height : 100%;
+    padding-top: 100px; /* to fixed the spacing between navbar and body content when using navbar-fixed-top */
     margin: 0 0 100px; /* bottom = footer height */
-
-
 }
 
 h1, h2, h3, h4, h5, h6 {
